--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@ng-select/ng-select": "^8.1.1",
+    "@popperjs/core": "^2.10.2",
+    "angular-calendar": "^0.29.0",
+    "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
+    "ngx-spinner": "^13.1.1",
+    "ngx-toastr": "^14.2.1",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
